# markov-textgen

./: README.md  mypy.ini  node.py  pyproject.toml
markov_textgen/: __init__.py
